--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
     <div class="hero"></div>
     <!-- Main Body -->
     <main class="content">
-        <div class="search-engine-optimization">
+        <div class="mainContent">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Notebook with Computer" />
             <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
         </div>
-        <div class="online-reputation-management">
+        <div class="mainContent">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Computer with graph"/>
             <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
         </div>
-        <div class="social-media-marketing">
+        <div class="mainContent">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Group meeting"/>
             <h2>Social Media Marketing</h2>
                 <p>
@@ -52,21 +52,21 @@
     </main>
     <!-- Side Column -->
     <aside class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Gear funnel to money"/>
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="lightbulb emitting"/>
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="gear turning money"/>
                 <p>
